deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: web
  template:
    metadata:
      labels:
        k8s-app: web
    spec:
      containers:
        - name: web
          image: ankur512512/argocd-nginx:3bed0f9ee691dfbe3b97d0bec1b8a13d4d5b4364
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
