service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  ports:
    - port: 443
      targetPort: 80
  selector:
    k8s-app: web
